FirstGitProj/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>General Case</fullName>
        <description>These were &quot;Activities&quot; previously. Use this for all incoming calls/emails that don&apos;t warrant a Service Case.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Info_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Info Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Change Info Account)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Request_Status__c</fullName>
        <description>This field will be used to store the current status of Customer Master Request  and will be used in Criterias</description>
        <label>Customer Master Request Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerTo_UnPartner_from_Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartnerTo_UnPartner from Sold-To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (PartnerTo_UnPartner from Sold-To Account)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportedPersonPhNo__c</fullName>
        <label>ReportedPersonPhNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SubType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Will Keep – Inv Adj Needed No Price Adj Needed</fullName>
                </value>
                <value>
                    <fullName>Customer Will Keep – No Price Adj Needed</fullName>
                </value>
                <value>
                    <fullName>Customer Will Keep - Price Adj Needed</fullName>
                </value>
                <value>
                    <fullName>Customer Will Keep – Price and Inv Adj Needed</fullName>
                </value>
                <value>
                    <fullName>General Case</fullName>
                </value>
                <value>
                    <fullName>Information Only - No Action</fullName>
                </value>
                <value>
                    <fullName>Issue Credit/Debit</fullName>
                </value>
                <value>
                    <fullName>Reconsignment</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AR vs non AR</fullName>
                </value>
                <value>
                    <fullName>ATP</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Carrier Issue</fullName>
                </value>
                <value>
                    <fullName>Changed/Added Product</fullName>
                </value>
                <value>
                    <fullName>Changed from CPU to TL</fullName>
                </value>
                <value>
                    <fullName>Changed from TL to CPU</fullName>
                </value>
                <value>
                    <fullName>Changed to CL</fullName>
                </value>
                <value>
                    <fullName>Changed Quantity</fullName>
                </value>
                <value>
                    <fullName>Changed Request Date</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Copying Error</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Color</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Equip Code</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Ordered For</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Order For</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Plant</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong P.O. #</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Product</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Quantity</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Ship Date</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Ship To</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Ship Via</fullName>
                </value>
                <value>
                    <fullName>CSR Entered Wrong Weight</fullName>
                </value>
                <value>
                    <fullName>Customer Request</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Damaged Product</fullName>
                </value>
                <value>
                    <fullName>Deleted Bill to</fullName>
                </value>
                <value>
                    <fullName>Deleted Bill to/Ship to</fullName>
                </value>
                <value>
                    <fullName>Deleted Ship to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to identify whether customer master onboarding request is submitted or not</description>
        <label>isSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Master_Request</fullName>
        <active>true</active>
        <businessProcess>General Case</businessProcess>
        <description>This record type is to capture customer on-boarding request</description>
        <label>Customer Master Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>